fix: fix slider overflow

--- a/src/scss/components/_favorite.scss
+++ b/src/scss/components/_favorite.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
+  gap: 2.5rem;
   position: relative;
 
   .favorite_title {
@@ -13,12 +13,9 @@
 }
 
 .slider {
-  overflow: hidden;
-  max-width: 1360px;
-}
-
-.slider_slides-container {
   display: flex;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .slider_slide-container {
@@ -70,7 +67,6 @@
   &--right {
     position: absolute;
     top: 50%;
-    transform: translateY(-85%);
   }
 
   &--left {
@@ -86,16 +82,16 @@
   display: flex;
   justify-content: center;
   gap: 0.75rem;
-  margin-top: 2.5rem;
 
   .slider_indicator {
     @include button(
       $width: 2.5rem,
-      $border: solid $border-light 0.125rem,
-      $radius: 6.25rem
+      $height: 0.25rem,
+      $bg-color: $border-light,
+      $radius: 1rem
     );
     &.current-slide {
-      border-color: $border-dark;
+      background-color: $border-dark;
     }
   }
 }
